--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tailwindcss/typography": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dompurify": "^3.2.4",
     "embla-carousel-react": "8.5.1",
+    "github-markdown-css": "^5.8.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "marked": "^15.0.7",
     "next": "15.1.0",
     "next-themes": "latest",
     "react": "^19",
@@ -57,8 +61,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@tailwindcss/typography": "latest"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
