--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest",
     "start": "next start",
     "lint": "next lint"
   },
@@ -37,18 +38,14 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/typography": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "dompurify": "^3.2.4",
     "embla-carousel-react": "8.5.1",
-    "github-markdown-css": "^5.8.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "marked": "^15.0.7",
     "next": "15.1.0",
     "next-themes": "latest",
     "react": "^19",
@@ -61,7 +58,17 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "node-notifier": "latest",
+    "@testing-library/dom": "latest",
+    "@tailwindcss/typography": "latest",
+    "marked": "latest",
+    "dompurify": "latest",
+    "github-markdown-css": "latest",
+    "jest": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@jest/globals": "latest",
+    "@testing-library/react": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
